RESOLVED FIXED288156
Generating scroll to text fragments around text that contains newlines fails.
https://bugs.webkit.org/show_bug.cgi?id=288156
Summary Generating scroll to text fragments around text that contains newlines fails.
Megan Gardner
Reported 2025-02-20 15:34:08 PST
Generating scroll to text fragments around text that contains newlines fails.
Attachments
Megan Gardner
Comment 1 2025-02-20 15:34:09 PST
Megan Gardner
Comment 2 2025-02-20 15:50:55 PST
EWS
Comment 3 2025-02-20 16:56:35 PST
Committed 290761@main (fecae51ab971): <https://commits.webkit.org/290761@main> Reviewed commits have been landed. Closing PR #41018 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.