Generating scroll to text fragments around text that contains newlines fails. https://bugs.webkit.org/show_bug.cgi?id=288156 rdar://137109344

Reviewed by Wenson Hsieh.

When generating text fragments from text that includes a new line character
we would send that text that included the newline to the URL parser when we added
the fragment to the URL that we would then paste to the clipboard. The URL spec
says to remove all newlines and tabs so the two words that were separated by a
newline are now squished together and the fragment is incorrect. We need to
simplify the white space that is extracted from the range and then the words
will not be squished together and the permissive white space matching in the
fragment find code will find the correct text.

We encode newlines as spaces when generating text fragments, so that they are
ingested correctly in both Chrome and Safari.

* LayoutTests/http/tests/scroll-to-text-fragment/generation-deal-with-newlines-in-directive-expected.txt: Added.
* LayoutTests/http/tests/scroll-to-text-fragment/generation-deal-with-newlines-in-directive.html: Added.
* Source/WebCore/dom/FragmentDirectiveGenerator.cpp:
(WebCore::previousWordsFromPositionInSameBlock):
(WebCore::nextWordsFromPositionInSameBlock):
(WebCore::FragmentDirectiveGenerator::generateFragmentDirective):

Canonical link: https://commits.webkit.org/290761@main